// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Body body-overflow="..." /> extend 2 props body-overflow 1`] = `
<body
  className="ek-body ek-body_overflow-x_scroll ek-body_overflow-y_visible"
/>
`;

exports[`<Body body-overflow="..." /> props body-overflow 1`] = `
<body
  className="ek-body ek-body_overflow_hidden"
/>
`;

exports[`<Body body-overflow="..." /> props body-overflow-x 1`] = `
<body
  className="ek-body ek-body_overflow-x_hidden"
/>
`;

exports[`<Body body-overflow="..." /> props body-overflow-y 1`] = `
<body
  className="ek-body ek-body_overflow-y_hidden"
/>
`;
